[package]
name = "pallet-basic-token-and-resource"
version = "3.0.0"
edition = "2018"
authors = ['Devanshu']
repository = 'https://github.com/substrate-developer-hub/recipes'
description = "A Pallet that implements a basic account-based cryptocurrency and transfer of resources"
license = "GPL-3.0-or-later"

[dependencies]
parity-scale-codec = { version = "2.0", features = ["derive"], default-features = false }
sp-std = { default-features = false, version = '3.0.0' }

# Substrate packages
frame-support = { version = '3.0', default-features = false }
frame-system = { version = '3.0', default-features = false }

[dev-dependencies]
serde = '1.0'

# Substrate packages
sp-core = '3.0'
sp-io = '3.0'
sp-runtime = '3.0'

[features]
default = ['std']
std = [
	'frame-support/std',
	'frame-system/std',
	'parity-scale-codec/std',
	'sp-std/std',
]
